	  that the block that was read contains uncorrectable bit errors.  In
	  this case, we cannot just give up and abort the operations.  Rather,
	  we need to treat read error like normal bad blocks in order to work
	  with NAND (2013-12-2).
	* fs/nxffs/Kconfig and nxffs_initialize.c:  Make the start up scan of
	  the media option. It just takes to long! (2013-12-02).
	* drivers/mtd/mtd_nand.c: Fix a typo in calculation of page number
	  (2013-12-02).
	* drivers/mtd/README.txt:  New README file (2013-12-04).
	* arch/arm/src/lm/lm_start.c:  Don't initialize .data if not running
	  from FLASH (2013-12-05).
	* fs/fat/fs_configfat.c: Fix a typo in the FAT16 formatting logic.
	  Was this ever able to format a FAT16 volume? (2013-12-05).
	* drivers/mtd/mtd_nand.c:  Check if block number is within range at
	  the top of the loop not the bottom.  Otherwise, we will do a bogus
	  transfer with the out-of-range block before we test it (2013-12-05).

6.33 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/include/a1x and src/a1x:  Directory structure to support
	  the Allwinner A10.  Not much there on the initial check-in
	  (2013-12-7).
	* configs/pcduino-a10:  Directory structure for the pcDuino board.  This
	  board is based on the Allwinner A10 (2013-12-7).
	* arch/arm/src/a1x/a1x_boot.c and chip/a1x_intc.h:  More A10 logic
	  (2013-12-8).
	* arch/arm/src/a1x/a1x_irq.c:  A10 interrupt handling logic (partial)
	  (2013-12-8).
	* drivers/video/ov2640.c: An OV2640 camera driver that will be used to
	  verify the SAMA5D3x-EK ISI peripheral (2013-1209).
	* sama5d3x-ek/ov2640 and src/sam_ov2640.c.  Board logic to test the SAMA5D3
	  ISI peripheral usign the OV2640 camera (2013-12-9).
	* arch/arm/src/a1x/chip/a1x_uart.h:  A10 UART register definition
	  header file (2013-12-9).
	* include/nuttx/video/fb.h:  Move fb.h to include/nuttx/video/
	  (2013-12-10).
	* include/nuttx/video/rgbcolors.h:  Move rgbcolors.h to include/nuttx/video.
	  (2013-12-10).
