@@ -56,7 +56,7 @@
 #include <nuttx/fs/fs.h>
 #include <nuttx/fs/ioctl.h>
 #include <nuttx/mtd/mtd.h>
-#include <nuttx/smart.h>
+#include <nuttx/fs/smart.h>
 
 /****************************************************************************
  * Private Definitions
