@@ -49,7 +49,7 @@
 #include <nuttx/fs/fs.h>
 #include <nuttx/fs/mksmartfs.h>
 #include <nuttx/fs/ioctl.h>
-#include <nuttx/smart.h>
+#include <nuttx/fs/smart.h>
 
 #include "smartfs.h"
 
