@@ -58,7 +58,7 @@
 #include <nuttx/fs/dirent.h>
 #include <nuttx/fs/ioctl.h>
 #include <nuttx/mtd/mtd.h>
-#include <nuttx/smart.h>
+#include <nuttx/fs/smart.h>
 
 #include "smartfs.h"
 
